1996-12-27  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c:
	moved condition for ANSI_VARARGS into td_lib configure-script

1996-04-10  Thomas E. Dickey  <dickey@clark.net>

	* src/dedblip.c:
	mods to make this work before curses is initialized (i.e., when piping
	to ded with "-d" option set).

1996-03-16  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h: memory leaks, mod to redoVIEW interface.

	* src/dedring.c: oops: must test 'used_expr' before freeing 'scan_expr'

1996-02-26  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: free memory-leak for cmd_sh, scan_expr

	* src/dedmake.c: quiet gcc-warning about -TRUE

1996-02-16  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: add 'freed' parm to redoVIEW()

	* src/dedview.c:
	added a parm to 'redoVIEW()' so we don't try to save an obsolete RING
	struct after quitting from it in ftree.c

	* src/ded.c: added parm to redoVIEW

	* src/ftree.c: operations that assign to 'gbl' should redoVIEW

1996-02-09  Thomas E. Dickey  <dickey@clark.net>

	* src/history.c: increased history-limit

	* src/version.h: mods to support scrolling regions

	* src/dedcolor.c:
	Linux isn't the only system that I can use the ISO 6429 codes on...

1996-02-01  Thomas E. Dickey  <dickey@clark.net>

	* src/dedtype.c: removed a redundant 'refresh()'

	* src/ded.c:
	fix a place where I could have typed a non-printing char into a message

1996-01-25  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c:
	in fd_show, check for special case of trashed f_root index (I encountered
	this immediately after upgrading to Slackware 3.0).

1996-01-13  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	mods for using the last (80th) column on display.  Use sysvr4 scrolling
	support if available.  Added -i option (temporary) for inverting color.
	Corrected ~ command in ftree.  Corrected infinite-loop in 'dedfind' when
	current file was symlink.

	* src/dedtype.c: